# phosphor-logging

./: .upstream-base-commit  bin.hpp  config_main.h  elog_entry.cpp  elog_entry.hpp  elog_serialize.cpp  elog_serialize.hpp  log_manager.cpp  log_manager.hpp  log_manager_main.cpp  log_streamer.cpp  log_streamer.hpp  logging_test.cpp  meson.build  meson.options  meson_options.txt  phosphor-logging-namespaces.json
config/: config.h.meson  meson.build
extensions/: meson.build
extensions/nvbmc-logging/: meson.build  nvbmc_logging.cpp
extensions/openpower-pels/: README.md
lib/: meson.build  redfish_event_log.cpp
lib/include/phosphor-logging/: asio_connection.hpp  meson.build  redfish_event_log.hpp
phosphor-rsyslog-config/: conf.cpp  conf.hpp  fwd-actions.cpp  fwd-actions.hpp  main.cpp  meson.build  server-conf.cpp  server-conf.hpp  utils.hpp
test/: linear_policy_test.cpp  log_purge_policy_test.cpp  meson.build  namespace_logging_test.cpp  remote_logging_test_config.cpp  remote_logging_tests.hpp
test/openpower-pels/: meson.build
xyz/openbmc_project/Logging/Internal/: Manager.interface.yaml
yaml/xyz/openbmc_project/Logging/Internal/: Manager.interface.yaml
