option('libonly', type: 'boolean', description: 'Build library only')
option('tests', type: 'feature', description: 'Build tests')
option(
    'openpower-pel-extension',
    type: 'feature',
    description: 'Create PELs',
    value: 'disabled'
)

option(
    'nvbmc-logging-extension',
    type: 'feature',
    description: 'Enable NVBMC Device Event Log Extensions for BootEntryID support',
    value: 'disabled'
)

option('yamldir', type: 'string', description: 'Path to YAML')
option(
    'callout_yaml',
    type: 'string',
    value: 'callouts/callouts-example.yaml',
    description: 'Path to Callout YAML',
)

option(
    'error_cap',
    type: 'integer',
    value: 200,
    description: 'Max number of error enttries allowed for commit',
)
option(
    'error_info_cap',
    type: 'integer',
    value: 10,
    description: 'Cap on informational (and below) severity errors',
)

option(
    'phal',
    type: 'feature',
    value: 'disabled',
    description: 'Enable support for PHAL',
)

option(
    'rsyslog_server_conf',
    type: 'string',
    value: '/etc/rsyslog.d/server.conf',
    description: 'Path to rsyslog server conf file',
)

option(
    'rsyslog_fwd_actions_conf_dir_path',
    type: 'string',
    value: '/etc/rsyslog.d',
    description: 'Path to rsyslog fwd actions conf files',
)

option(
    'rw_config_file_path',
    type: 'string',
    value: '/etc/phosphor-logging/conf/rw-config.json',
    description: 'Path to read-write phosphor-logging config file',
)

option(
    'log_purge_policy_default',
    type: 'boolean',
    value: false,
    description: 'Default value of log purge policy enabled state',
)

option(
    'enable_rsyslog_fwd_actions_conf',
    type: 'boolean',
    value: false,
    description: 'Enable the creation of fwd actions conf files by phosphor-rsyslog-config'
)

option(
    'enable_log_streaming',
    type: 'boolean',
    value: false,
    description: 'Enable log socket'
)

option(
    'log_streamer_socket_path',
    type: 'string',
    value: '/run/rsyslog/log_streamer_console_input',
    description: 'Path to rsyslog socket',
)